[package]
edition = "2021"
name = "anaface-rs"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cached = { version = "0.54.0", features = ["wasm"] }
console_error_panic_hook = "0.1.7"
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
ndarray = { version = "0.16.1", default-features = false }
serde = { version = "1.0.217", features = ["alloc", "derive"], default-features = false }
serde-wasm-bindgen = "0.6.5"
tsify = "0.4.5"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["console"] }
wee_alloc = "0.4.5"

[profile.release]
opt-level = "s"
